// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support Form Component Form should render heroku message 1`] = `<HerokuMessage />`;

exports[`Support Form Component Form should render issue dropdown with help text 1`] = `
<Field
  component={[Function]}
  errorInLabel={true}
  helpText={
    <React.Fragment>
      Additional technical support is available on paid plans. 
      <PageLink
        to="/account/billing/plan"
      >
        Upgrade now
      </PageLink>
      .
    </React.Fragment>
  }
  label="I need help with..."
  name="issueId"
  options={
    Array [
      Object {
        "disabled": true,
        "label": "Select an option",
        "value": "",
      },
      Object {
        "label": "I need help!",
        "value": "technical_issues",
      },
    ]
  }
  validate={[Function]}
/>
`;

exports[`Support Form Component Form should render successfully created ticket message 1`] = `
<div
  className="SupportContainer"
>
  <h6>
    Your Ticket Has Been Submitted
  </h6>
  <p>
    Ticket #
    123
  </p>
  <p>
    Please check your email for updates on your support ticket.
  </p>
  <Button
    primary={true}
    size="default"
  >
    Continue
  </Button>
</div>
`;

exports[`Support Form Component Form should render support form 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      errorInLabel={true}
      label="I need help with..."
      name="issueId"
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Select an option",
            "value": "",
          },
          Object {
            "label": "I need help!",
            "value": "technical_issues",
          },
        ]
      }
      validate={[Function]}
    />
    <Field
      component={[Function]}
      errorInLabel={true}
      label="Tell us more about your issue"
      multiline={true}
      name="message"
      resize="none"
      rows={10}
      validate={[Function]}
    />
    <Field
      component={[Function]}
      label="Attach a file"
      name="attachment"
      type="file"
      validate={[Function]}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      primary={true}
      size="default"
      submit={true}
    >
      Submit Ticket
    </Button>
  </Panel.Section>
</form>
`;

exports[`Support Form Component Form should render unauthorized message 1`] = `<NoIssues />`;

exports[`Support Form Component Form should render with selected issue message label 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      errorInLabel={true}
      label="I need help with..."
      name="issueId"
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Select an option",
            "value": "",
          },
          Object {
            "label": "I need help!",
            "value": "technical_issues",
          },
        ]
      }
      validate={[Function]}
    />
    <Field
      component={[Function]}
      errorInLabel={true}
      label="Tell use more about your technical issue"
      multiline={true}
      name="message"
      resize="none"
      rows={10}
      validate={[Function]}
    />
    <Field
      component={[Function]}
      label="Attach a file"
      name="attachment"
      type="file"
      validate={[Function]}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      primary={true}
      size="default"
      submit={true}
    >
      Submit Ticket
    </Button>
  </Panel.Section>
</form>
`;
